--- a/ledticker.service
+++ b/ledticker.service
@@ -8,7 +8,7 @@ StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=ledticker
 Restart=always
-User=pi
+User=root
 
 [Install]
 WantedBy=multi-user.target
