--- a/config.yml
+++ b/config.yml
@@ -1,14 +1,2 @@
-aws:
-  credentials:
-    aws_access_key_id: sooper
-    aws_secret_access_key: secret/EQp
-
-#codes:
-#  type: file
-#  path: codes.csv
-
-
-codes:
-  type: s3
-  bucket: dooman-raspian
-  path: codes.csv
+flashlex:
+  config: /home/pi/projects/flashlex-pi-python/keys/config.yml
